<resources>
    <string name="app_name">Vortex</string>
    <string name="facebook_application_id" translatable="false">722545924776750</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb722545924776750</string>
    <string name="ok">Ok</string>
    <string name="alert_dialog_setting">Settings</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account? <font color="#FFFFFF"><b>Register</b></font> here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_e_mail_here">Please Enter Email Here</string>
    <string name="submit">Submit</string>
    <string name="please_check_internet">Please Check Internet Connetion</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="forgot_password_quest">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="already_have_an_account_login_here">Already have an account? <b><font color="#ffffff">Login </font></b>here</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_do_you_want_to_exit">Are you sure do you want to Exit</string>
    <string name="description">Description</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
</resources>
