<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/popup_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivCancel"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_10sdp"
        android:contentDescription="@string/forgot_password"
        android:src="@drawable/newcross" />

    <vortex.versatilemobitech.com.views.MontserratTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />


    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/small_rounded_corner_white"
        android:drawableLeft="@drawable/vremail"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/vremail"
        android:hint="@string/please_enter_e_mail_here"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/gray"
        android:textSize="@dimen/_14sdp" />

    <vortex.versatilemobitech.com.views.MontserratTextView
        android:id="@+id/txtSubmit"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_white"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/silver" />
</LinearLayout>
