<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vortexappbg"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/vortexuitxt"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/small_rounded_corner_white"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <vortex.versatilemobitech.com.views.MontserratEditText
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:id="@+id/edtFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="@dimen/_15sdp"
                android:drawableStart="@drawable/smallprofile"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16sdp" />

            <vortex.versatilemobitech.com.views.MontserratEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="@dimen/_15sdp"
                android:drawableStart="@drawable/vremail"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <vortex.versatilemobitech.com.views.MontserratEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/_15sdp"
                    android:drawableStart="@drawable/vrpass"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_16sdp" />

                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:contentDescription="@string/password"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/password_hide" />
            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/rounded_corner_white"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/silver"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login_here"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>