<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <vortex.versatilemobitech.com.views.MontserratTextView
        android:id="@+id/txt_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/are_you_sure_do_you_want_to_exit"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_16sdp"
        android:textStyle="normal"
        app:font_type="regular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <vortex.versatilemobitech.com.views.MontserratTextView
            android:id="@+id/tv_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:font_type="regular" />

        <vortex.versatilemobitech.com.views.MontserratTextView
            android:id="@+id/tv_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:font_type="regular" />
    </LinearLayout>

</LinearLayout>
