<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vortexappbg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:src="@drawable/vortexuitxt"
            android:visibility="visible" />

        <vortex.versatilemobitech.com.views.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/small_rounded_corner_white"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">


            <vortex.versatilemobitech.com.views.MontserratEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/vremail"
                android:drawablePadding="18dp"
                android:hint="@string/e_mail"
                android:inputType="text"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <vortex.versatilemobitech.com.views.MontserratEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/vrpass"
                    android:drawablePadding="18dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_14sdp" />

                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/password_hide" />
            </RelativeLayout>


        </LinearLayout>

        <vortex.versatilemobitech.com.views.MontserratTextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/forgot_password_quest"
            android:textColor="@color/lightblack"
            android:textSize="@dimen/_12sdp"
            android:visibility="visible" />

        <vortex.versatilemobitech.com.views.MontserratTextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/rounded_corner_white"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/color_bbb"
            android:textSize="@dimen/_14sdp"
            app:font_type="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgFacebook"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/facebook_icon" />

            <ImageView
                android:id="@+id/imgGoogle"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/googleplus_icon" />
        </LinearLayout>


        <vortex.versatilemobitech.com.views.MontserratTextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/lightblack"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</ScrollView>